# TamgiClassificator

./: .gitignore  README.md
src/: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/blender_api/: addProjectScript1.py  addProjectScript2.py  experiment.py  photo_from_blocks.py
src/data_processing/: convert2coco.py  image2svg.py  marking.py  train_val_split_coco.py  utils.py
src/data_processing/notebooks/: Markup.ipynb
src/embeddings/configs/: config.yaml
src/embeddings/configs/augmentation/: basic_augs.yaml  grayscale_augs.yaml  grayscale_spatial_augs.yaml  grayscale_strong_augs.yaml  spatial_augs.yaml  strong_augs.yaml
src/embeddings/configs/callbacks/: callbacks.yaml
src/embeddings/configs/data/: data.yaml
src/embeddings/configs/loss/: arcface.yaml  triplet.yaml
src/embeddings/configs/model/: efficientnet.yaml  mnasnet.yaml  mobilenet.yaml  regnet.yaml  resnet18.yaml  resnet50.yaml  shufflenet.yaml
src/embeddings/configs/optimizer/: adam.yaml  adamw.yaml
src/embeddings/configs/trainer/: default_trainer.yaml
src/embeddings/configs/training/: default_training.yaml
src/embeddings/src/: run_model.py  test_model.py  train_model.py
src/embeddings/src/data/: LitDataset.py
src/embeddings/src/model/: LitModel.py
src/embeddings/src/utils/: __init__.py  data.py  losses.py  utils.py
src/mmdetection/: multi-train.py  requirements.txt  setup.py
src/mmdetection/configs/_base_/: default_runtime.py
src/mmdetection/mmdet/: __init__.py  registry.py  version.py
src/mmdetection/tools/: test.py  train.py
(+395 files in other folders)
