[project]
name = "tamgi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ms-Ana", email = "ms.urmanana@gmail.com"},
]
dependencies = [
    "torch==2.2.0",
    "openmim>=0.3.9",
    "mmengine>=0.10.4",
    "setuptools==69.5.1",
    "qdrant-client>=1.9.1",
    "hydra-core>=1.3.2",
    "pytorch-lightning>=2.2.4",
    "scikit-learn>=1.5.0",
    "tensorboard>=2.16.2",
    "albumentations>=1.4.7",
    "torchvision>0.16",
]


requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "pre-commit>=3.7.1",
    "black>=24.4.2",
    "isort>=5.13.2",
    "pylint>=3.1.0",
]
[tool.pdm.scripts]
lint = "pylint --recursive=y embeddings mmdetection data_processing"
